--- a/src/app/concursos/concursos.page.html
+++ b/src/app/concursos/concursos.page.html
@@ -235,7 +235,8 @@
                             <!-- <ion-toolbar> -->
                             <!-- <ion-buttons slot="start"> -->
                             <ion-button
-                              class="ion-float-right"
+                            fill="outline"
+                              class="ion-float-right btn-contest"
                               size="small"
                               [routerLink]="[c.id]"
                               >Ver concurso</ion-button
