--- a/src/app/fotoclubs-abm/fotoclub-post/fotoclub-post.component.html
+++ b/src/app/fotoclubs-abm/fotoclub-post/fotoclub-post.component.html
@@ -80,6 +80,7 @@
                   [(ngModel)]="fotoclub.facebook"
                     autocapitalize="sentences"
                     ngDefaultControl
+                    type="url"
                   ></ion-input>
                 </ion-item>
                 
@@ -102,7 +103,7 @@
                   <ion-input
                   name="instagram"
                   [(ngModel)]="fotoclub.instagram"
-                    type="text"
+                    type="url"
                     ngDefaultControl
                   ></ion-input>
                 </ion-item>
