--- a/src/app/info-centro/info-centro.page.html
+++ b/src/app/info-centro/info-centro.page.html
@@ -2,51 +2,114 @@
   <ion-grid class="ion-no-padding">
     <!-- PRESENTACION ULTIMO CONCURSO-->
     <ion-row>
-      <app-presentacion-ultimo-concurso class="w-100"></app-presentacion-ultimo-concurso>
+      <app-presentacion-ultimo-concurso
+        class="w-100"
+      ></app-presentacion-ultimo-concurso>
     </ion-row>
 
     <!-- CONTENERDEOR ICONOS/ACCESO DIRECTOS -->
-    <ion-row>
-      <ion-col></ion-col>
-      <ion-col></ion-col>
-      <ion-col></ion-col>
-    </ion-row>
-  
-    <!-- SOBRE GRUPO FOTOGRAFICO CENTRO -->
-    <ion-row class="bg-gray1">
+    <ion-row class="ion-margin-top ion-margin-bottom">
       <ion-col>
-        <ion-row>
-          <ion-col><h2 class="text-center">Sobre GFC</h2></ion-col>
-        </ion-row>
+        <ion-row class="ion-justify-content-around ion-text-center">
+          <ion-col size="3">
+            <ion-row class="ion-align-items-center">
+              <ion-col>
+              <ion-icon name="aperture-outline"></ion-icon>
+              </ion-col>
+            </ion-row>
+            <ion-row class="ion-justify-content-center">
+              <h3>Fotografía</h3>
+            </ion-row>
+            <ion-row>
+              <ion-text
+              >Lorem ipsum dolor sit amet,consectetur adipiscing elit</ion-text>
+            </ion-row>
+            </ion-col
+          >
+          <ion-col  size="3" >
+            <ion-row class="ion-align-items-center">
+              <ion-col>
+                <ion-icon name="trophy-outline"
+                ></ion-icon
+                >
 
-        <ion-row>
-          <ion-col><p>El GFC (Grupo Fotográfico Centro) agrupa desde el año 1967 a fotoclubes del centro
-            este de la provincia de Buenos Aires pertenecientes a la F.A.F (Federación Argentina
-            de Fotografía). Las ciudades que se encuentran representadas actualmente son:
-            Balcarce, Benito Juarez, Necochea, Olavarria y Tandil. Cuenta como objetivo la
-            promoción de la actividad fotográfica en el ámbito fotoclubista y el aprendizaje
-            continuo.</p></ion-col>
+              </ion-col>
+            </ion-row>
+            <ion-row class="ion-justify-content-center">
+              <h3>Concursos</h3>
+            </ion-row>
+            <ion-row>
+              <ion-text>Concursos internos con jurados representantes F.A.F</ion-text>
+    
+            </ion-row>
+          
+          </ion-col>
+          <ion-col  size="3.5">
+            <ion-row class="ion-align-items-center">
+              <ion-col>
+              <ion-icon name="people-outline"></ion-icon>
+              </ion-col>
+            </ion-row>
+            <ion-row class="ion-justify-content-center">
+              <h3>Camaradería</h3>
+            </ion-row>
+            <ion-row>
+              <ion-text
+              >Un espacio para compartir el interés por la fotografía
+              artística</ion-text>
+            </ion-row>
+           </ion-col
+          >
         </ion-row>
       </ion-col>
     </ion-row>
+   
+   
+
+    <!-- SOBRE GRUPO FOTOGRAFICO CENTRO -->
+    <ion-row class="ion-margin-top ion-margin-bottom bg-gray1 ion-text-center">
+      <ion-col>
+        <ion-row class="ion-justify-content-center" >
+          <ion-col size="10">
+            <ion-row>
+              <ion-col><h2>Sobre GFC</h2></ion-col>
+            </ion-row>
     
+            <ion-row  class="ion-padding-bottom">
+              <ion-col class="ion-padding-bottom"
+                ><ion-text class="ion-text-justify">
+                  El GFC (Grupo Fotográfico Centro) agrupa desde el año 1967 a
+                  fotoclubes del centro este de la provincia de Buenos Aires
+                  pertenecientes a la F.A.F (Federación Argentina de Fotografía).
+                  Las ciudades que se encuentran representadas actualmente son:
+                  Balcarce, Benito Juarez, Necochea, Olavarria y Tandil. Cuenta como
+                  objetivo la promoción de la actividad fotográfica en el ámbito
+                  fotoclubista y el aprendizaje continuo.
+                </ion-text></ion-col
+              >
+            </ion-row>
+          </ion-col>
+        </ion-row>
+      </ion-col>
+      
+    </ion-row>
+
     <!-- COMISIÒN DIRECTIVA -->
-    <ion-row >
-      <app-presentacion-comision-directiva  class="w-100"></app-presentacion-comision-directiva>
+    <ion-row>
+      <app-presentacion-comision-directiva
+        class="w-100"
+      ></app-presentacion-comision-directiva>
     </ion-row>
 
     <!-- MIEMBROS -->
     <ion-row>
-      <app-presentacion-miembros  class="w-100"></app-presentacion-miembros>
+      <app-presentacion-miembros class="w-100"></app-presentacion-miembros>
     </ion-row>
 
     <!-- SUBSCRIBITE, igual ahora no se agrega -->
-    <ion-row>
-
-    </ion-row>
+    <ion-row> </ion-row>
   </ion-grid>
 </ion-content>
-
 
 <!--
 <ion-content>
