--- a/src/app/nav/footer/footer-post/footer-post.component.html
+++ b/src/app/nav/footer/footer-post/footer-post.component.html
@@ -27,6 +27,7 @@
                   [(ngModel)]="footer.facebook"
                     autocapitalize="sentences"
                     ngDefaultControl
+                    type="url"
                   ></ion-input>
                 </ion-item>
                 
@@ -47,7 +48,7 @@
                   <ion-label position="floating"><ion-icon name="logo-instagram"></ion-icon> Instagram</ion-label>
                   <ion-input
                   [(ngModel)]="footer.instagram"
-                    type="tel"
+                    type="url"
                     ngDefaultControl
                   ></ion-input>
                 </ion-item>
@@ -58,7 +59,7 @@
                   <ion-label position="floating"><ion-icon name="logo-youtube"></ion-icon> Youtube</ion-label>
                   <ion-input
                   [(ngModel)]="footer.youtube"
-                    type="tel"
+                    type="url"
                     ngDefaultControl
                   ></ion-input>
                 </ion-item>
