--- a/src/app/concursos/concursos.page.scss
+++ b/src/app/concursos/concursos.page.scss
@@ -6,8 +6,13 @@ ion-badge{
   --ion-color-base: rgba(0, 0, 0, 0.311) !important;
 }
 
+.btn-contest{
+  --background: #f6f9fff0;
+}
+
 .capa-opacidad {
- background-color: #55555562;
+//  background-color: #55555562;
+background:          linear-gradient(90deg, rgb(0, 0, 0) 0%, rgba(0,0,0,0) 100%);
  color: white;
 }
 
