--- a/src/app/fotoclubs-abm/fotoclubs-abm.page.html
+++ b/src/app/fotoclubs-abm/fotoclubs-abm.page.html
@@ -116,14 +116,26 @@
                         </ion-col> -->
                         <!-- <ion-col size="8" size-sm="10.7"> -->
                         <ion-col size="10.5" size-sm="12">
-                          <ion-label class="ion-margin-start">
-                            <!-- <ion-card-subtitle title="Username"
-                              ><i>@{{m.user.username}}</i></ion-card-subtitle
-                            > -->
-                            <ion-card-title title="Nombre">
-                              {{f.name}}
-                            </ion-card-title>
-                          </ion-label>
+                          <ion-row>
+                            
+                            <ion-col size="12">
+<ion-row>
+  <ion-thumbnail class="h-100">
+    <ion-img [src]="f.photo_url != null && f.photo_url != ''  ? configService.apiUrl(f.photo_url) : './assets/no-pictures.png' "></ion-img>
+    </ion-thumbnail>
+    
+    <ion-label class="ion-margin-start">
+      <!-- <ion-card-subtitle title="Username"
+        ><i>@{{m.user.username}}</i></ion-card-subtitle
+      > -->
+      <ion-text title="Nombre">
+        <b>{{f.name}}</b>
+        
+      </ion-text>
+    </ion-label>
+  </ion-row>
+                            </ion-col>
+                          </ion-row>
                         </ion-col>
                         <ion-col
                           size="1.5"
