se arregla estilo de boton inicial cuando cambia a modo noche para que mantenga su color, y otros errores menores

--- a/src/app/concursos/concursos.page.html
+++ b/src/app/concursos/concursos.page.html
@@ -190,12 +190,12 @@
                             <app-contest-status-chip
                               [contest]="c"
                             ></app-contest-status-chip>
-                            <ion-card-title color="light"
+                            <ion-card-title class="txtL" color="light"
                               >{{c.name}}</ion-card-title
                             >
                           </ion-col>
                         </ion-row>
-                        <ion-card-subtitle color="light"
+                        <ion-card-subtitle class="txtL" color="light"
                           >Desde {{c.start_date | date:'dd-MM-yyyy' }} Hasta
                           {{c.end_date | date:'dd-MM-yyyy' }}</ion-card-subtitle
                         >
