--- a/src/app/info-centro/presentacion-miembros/presentacion-miembros.component.html
+++ b/src/app/info-centro/presentacion-miembros/presentacion-miembros.component.html
@@ -12,7 +12,7 @@
               <ion-slide *ngFor="let s of sliderOne.slidesItems">
                 <ion-row class="w-100 spc h-100">
 
-                  <ion-col class="div ion-padding">
+                  <ion-col size-md="6" size="12" class="div ion-padding">
                       
                       <ion-img [src]="s.photo_url != null && s.photo_url != ''  ? configService.apiUrl(s.photo_url) : './assets/no-pictures.png' "></ion-img>
                   </ion-col>
