Se agrega botón de camara de foto que ahora hace click en fileinput oculto

--- a/src/app/shared/usuario-img/usuario-img.component.html
+++ b/src/app/shared/usuario-img/usuario-img.component.html
@@ -6,4 +6,7 @@
     <span     *ngIf="!(src == '' || src == undefined)"><img src="{{src}}" /></span>
   </div>
   
+  <label *ngIf="imageChangeEnabled" class="camera-cont">
+    <ion-icon   size="medium" name="camera" (click)="imageClick()"></ion-icon>
+  </label>
 </ion-avatar>
