--- a/src/app/shared/usuario-img/usuario-img.component.scss
+++ b/src/app/shared/usuario-img/usuario-img.component.scss
@@ -27,3 +27,20 @@
     width:       auto;
     user-select: none;
 }
+
+.camera-cont{
+    position:       absolute;
+    bottom:         .7rem;
+    right:          .7rem;
+    background:   #dbdbdb;
+    border-radius:  100%;
+    padding:        .4rem;
+    height:         2rem;
+    width:          2rem;
+    text-align:     center;
+    cursor:         pointer;
+}
+
+.camera-cont:hover{
+    background:   #e3e3e3;
+}
