Se cambia log out por salir

--- a/src/app/usuario/usuario.page.html
+++ b/src/app/usuario/usuario.page.html
@@ -100,7 +100,7 @@
                       ios="log-out-outline"
                       md="log-out-sharp"
                     ></ion-icon>
-                    <ion-label>Log Out</ion-label>
+                    <ion-label>Salir</ion-label>
                   </ion-item>
                 </ion-list>
                 
