--- a/src/app/concursos/concurso-detail/image-post/image-post.page.html
+++ b/src/app/concursos/concurso-detail/image-post/image-post.page.html
@@ -61,7 +61,7 @@
                     >Concursante</ion-label
                   >
                   <ionic-selectable  item-content #profileSelect
-                    [(ngModel)]="image.profile_id"
+                    [(ngModel)]="perfil_elegido"
                     [items]="profiles_list"
                     itemValueField="id"
                     itemTextField="name"
@@ -71,22 +71,15 @@
 
                   
                 </ion-item>
-                <ng-template #unicoElemento 
-              
-                >
-                <!-- <div class="ion-hide"> -->
-                <!-- </div> -->
-                <!-- <ion-text color="dark">
-                  {{concursantes[0].name}} {{concursantes[0].last_name}}
-                </ion-text> -->
-                <ion-item class="w-100 ion-margin-bottom">
-                <ion-label position="floating">Concursante</ion-label>
-                <ion-input color="dark"
-                [(ngModel)]="profile"
-                disabled>
-                  
-                </ion-input>
-              </ion-item>
+                <ng-template #unicoElemento >
+                    <ion-item class="w-100 ion-margin-bottom">
+                    <ion-label position="floating">Concursante</ion-label>
+                    <ion-input color="dark"
+                    name="profile"
+                    [(ngModel)]="profile"
+                    disabled>
+                    </ion-input>
+                  </ion-item>
                 </ng-template>
               </ion-row>
               <ion-row>
@@ -113,12 +106,12 @@
                       size-sm="3"
                       class="ion-align-self-center"
                     >
-                      <app-btn-post
+                      <!-- <app-btn-post
                         [posting]="posting"
                         [disabled]="!datosCargados()"
                         (post)="postImage()"
-                      ></app-btn-post>
-                      <!-- <ion-button
+                      ></app-btn-post> -->
+                      <ion-button
                         expand="block"
                         type="submit"
                         (click)="postImage()"
@@ -130,7 +123,7 @@
                           size="small"
                         ></ion-spinner>
                         Guardar
-                      </ion-button> -->
+                      </ion-button>
                     </ion-col>
 
                     <ion-col
