--- a/src/app/concursos/concurso-detail/image-post/image-post.page.html
+++ b/src/app/concursos/concurso-detail/image-post/image-post.page.html
@@ -90,7 +90,7 @@
                 <ion-item class="w-100 ion-margin-bottom">
                   <!-- [position]="(profile_id != undefined) ? 'stacked' : 'floating'" -->
                   <ion-label position="floating">Sección</ion-label>
-                  <ion-select (ionChange)=" sectionSelect()" [(ngModel)]="section_id" ngDefaultControl>
+                  <ion-select (ionChange)=" sectionSelect" [(ngModel)]="section_id" ngDefaultControl>
                     <!-- [(value)]="image.profile_id" -->
                     <ion-select-option
                       *ngFor="let s of secciones"
