--- a/src/app/concursos/concurso-detail/image-review/image-review.page.html
+++ b/src/app/concursos/concurso-detail/image-review/image-review.page.html
@@ -2,8 +2,6 @@
   <ion-header>
     <ion-toolbar>
       <ion-row class="ion-align-items-center ion-margin-end ion-margin-start">
-        <!-- <ion-back-button [defaultHref]="'/concursos/' + id"></ion-back-button> -->
-        <!-- <ion-back-button (click)="dismiss()"></ion-back-button> -->
         <ion-col>
           <h5 class="ion-text-wrap">Puntuar imagen de {{ concurso }}</h5>
         </ion-col>
@@ -24,104 +22,50 @@
             <ion-col>
               <ion-row>
                 <ion-col class="ion-align-self-center">
-                  <ion-card-subtitle title="Código de la obra"
-                    >{{ image.code }}</ion-card-subtitle
-                  >
-                  <ion-card-title title="Nombre de la obra"
-                    ><b>{{image.title}}</b></ion-card-title
-                  >
-                  <div>
-                    <img [src]="imgSource" alt="">
-                  </div>
-
+                  <ion-card-subtitle title="Código de la obra">{{ image.code }}</ion-card-subtitle>
+                  <ion-card-title title="Nombre de la obra"><b>{{image.title}}</b></ion-card-title>
+                  <div> <img [src]="imgSource" alt=""> </div>
                 </ion-col>
               </ion-row>
+
               <ion-row>
                 <ion-col>
                   <form
                     #formReview="ngForm"
-                    (ngSubmit)="postReview(formReview)"
-                  >
+                    (ngSubmit)="postReview(formReview)">
+
                     <ion-item class="w-100 ion-margin-bottom">
                       <ion-label position="floating">Premio</ion-label>
-                      <!-- <ion-input
-                        [ngModel]="review.prize"
-                        name="prize"
-                        required
-                      ></ion-input> -->
-                      <!-- [(value)]="image.profile_id" -->
+                     
                       <ion-select name="elegida" [(ngModel)]="elegida" ngDefaultControl>
-                        <ion-select-option
-                          *ngFor="let met of metricas"
-                          [value]="met"
-                          >{{ met.prize }}</ion-select-option
-                        >
+                        <ion-select-option  *ngFor="let met of metricas"  [value]="met">{{ met.prize }}</ion-select-option>
                       </ion-select>
                     </ion-item>
-                    <!-- <ion-item class="w-100 ion-margin-bottom">
-                      <ion-label position="floating">Puntaje</ion-label>
-                      <ion-input
-                        [ngModel]="review.score"
-                        name="score"
-                        required
-                      ></ion-input>
-                    </ion-item> -->
 
                     <ion-row class="ion-justify-content-end">
                       <ion-col size="12">
                         <ion-row class="ion-justify-content-end">
                           <ion-col
-                            push-sm="3"
-                            size="12"
-                            size-sm="3"
-                            class="ion-align-self-center"
-                          >
-                            <app-btn-post
-                              [posting]="posting"
-                              [disabled]="!formReview.valid"
-                            ></app-btn-post>
-                            <!-- <ion-button
-                              expand="block"
-                              type="submit"
-                              [disabled]="!formReview.valid"
-                            >
-                              <ion-spinner 
-                                *ngIf="posting; else texto"
-                                size="small"
-                              ></ion-spinner>
-                              <ng-template #texto>
-                                <ion-text>Guardar</ion-text>
-                              </ng-template>
-                            </ion-button> -->
+                            push-sm="3" size="12" size-sm="3" class="ion-align-self-center">
+
+                            <app-btn-post [posting]="posting" [disabled]="!formReview.valid"></app-btn-post>
                           </ion-col>
 
-                          <ion-col
-                            class="ion-align-self-center"
-                            pull-sm="3"
-                            size="12"
-                            size-sm="3"
-                          >
-                            <!-- <ion-back-button
-                          text="Cancelar"
-                          icon=""
-                          (click)="dismiss()"
-                          [defaultHref]="backUrl"
-                        ></ion-back-button
-                      > -->
+                          <ion-col class="ion-align-self-center" pull-sm="3" size="12" size-sm="3">
                             <ion-button
-                              expand="block"
-                              (click)="dismiss()"
-                              fill="clear"
-                            >
-                              Cancelar</ion-button
-                            >
+                              expand="block" (click)="dismiss()" fill="clear">
+                              Cancelar
+                            </ion-button>
                           </ion-col>
+
                         </ion-row>
                       </ion-col>
                     </ion-row>
+
                   </form>
                 </ion-col>
               </ion-row>
+
             </ion-col>
           </ion-row>
         </ion-col>
