--- a/src/app/concursos/concurso-detail/concursantes/concursantes.component.html
+++ b/src/app/concursos/concurso-detail/concursantes/concursantes.component.html
@@ -111,15 +111,19 @@
                             <ion-col size="3" size-sm="1.3">
                               <app-usuario-img [src]="m.profile.img_url != null ? configService.apiUrl(m.profile.img_url) : ''"></app-usuario-img>
                             </ion-col>
+
                             <ion-col size="8" size-sm="8.2">
                               <ion-label class="ion-margin-start">
-                                <ion-card-subtitle title="Username"><i>@{{ m.profile.user.username }}</i>
-                                <ion-text title="Nombre">
-                                  <b>{{ m.profile.name }} {{ m.profile.last_name }}</b>
-                                </ion-text>
+                                <ion-card-subtitle title="Username">
+                                  <i>@{{ m.profile.user.username }}</i>
+                                  <ion-text title="Nombre">
+                                    <b>{{ m.profile.name }} {{ m.profile.last_name }}</b>
+                                  </ion-text>
+                                </ion-card-subtitle>
                                 <ion-card-subtitle title="Username">{{ getFotosCargadas(m.profile_id) }} fotos cargadas</ion-card-subtitle>
                               </ion-label>
                             </ion-col>
+
                             <ion-col
                               size="1"
                               class="ion-hide-sm-up ion-justify-content-center">
